TFP-6103 freshe opp behandlingskontroll - transisjon og resultat