@@ -2,42 +2,57 @@ package no.nav.foreldrepenger.behandlingskontroll;
 
 import static java.util.stream.Collectors.toList;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
-import no.nav.foreldrepenger.behandlingskontroll.transisjoner.FellesTransisjoner;
-import no.nav.foreldrepenger.behandlingskontroll.transisjoner.TransisjonIdentifikator;
+import no.nav.foreldrepenger.behandlingskontroll.transisjoner.StegTransisjon;
+import no.nav.foreldrepenger.behandlingskontroll.transisjoner.Transisjon;
+import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingStegType;
 import no.nav.foreldrepenger.behandlingslager.behandling.aksjonspunkt.Aksjonspunkt;
 import no.nav.foreldrepenger.behandlingslager.behandling.aksjonspunkt.AksjonspunktDefinisjon;
 
 public class BehandleStegResultat {
     private final List<AksjonspunktResultat> aksjonspunktListe;
-    private final TransisjonIdentifikator transisjon;
+    private final Transisjon transisjon;
 
-    private BehandleStegResultat(TransisjonIdentifikator transisjon, List<AksjonspunktResultat> aksjonspunktListe) {
-        this.aksjonspunktListe = aksjonspunktListe;
+    private BehandleStegResultat(StegTransisjon transisjon, BehandlingStegType målSteg, List<AksjonspunktResultat> aksjonspunktListe) {
+        this(new Transisjon(transisjon, målSteg), aksjonspunktListe);
+    }
+
+    private BehandleStegResultat(StegTransisjon transisjon, List<AksjonspunktResultat> aksjonspunktListe) {
+        this(new Transisjon(transisjon, null), aksjonspunktListe);
+    }
+
+    private BehandleStegResultat(Transisjon transisjon, List<AksjonspunktResultat> aksjonspunktListe) {
         this.transisjon = transisjon;
+        this.aksjonspunktListe = Optional.ofNullable(aksjonspunktListe).orElseGet(List::of);
+        if (transisjon.stegTransisjon().direkteTilGittDestinasjon() && transisjon.målSteg() == null) {
+            throw new IllegalArgumentException("Utviklerfeil mangler målsteg");
+        }
+        if (transisjon.stegTransisjon().kreverAksjonspunkt() && (aksjonspunktListe == null || aksjonspunktListe.isEmpty())) {
+            throw new IllegalArgumentException("Utviklerfeil mangler retur-aksjonspunkt");
+        }
     }
 
     public List<AksjonspunktDefinisjon> getAksjonspunktListe() {
-        return aksjonspunktListe.stream().map(AksjonspunktResultat::getAksjonspunktDefinisjon).collect(toList());
+        return aksjonspunktListe.stream().map(AksjonspunktResultat::getAksjonspunktDefinisjon).toList();
     }
 
     public List<AksjonspunktResultat> getAksjonspunktResultater() {
         return aksjonspunktListe;
     }
 
-    public TransisjonIdentifikator getTransisjon() {
+    public Transisjon getTransisjon() {
         return transisjon;
     }
+
 
     /**
      * Factory-metode basert på liste av {@link AksjonspunktResultat}, støtter
      * callback for å modifisere {@link Aksjonspunkt}
      */
     public static BehandleStegResultat utførtMedAksjonspunktResultater(List<AksjonspunktResultat> aksjonspunktResultater) {
-        return new BehandleStegResultat(FellesTransisjoner.UTFØRT, aksjonspunktResultater);
+        return new BehandleStegResultat(StegTransisjon.UTFØRT, aksjonspunktResultater);
     }
 
     public static BehandleStegResultat utførtMedAksjonspunktResultat(AksjonspunktResultat aksjonspunktResultat) {
@@ -50,7 +65,7 @@ public class BehandleStegResultat {
      */
     public static BehandleStegResultat utførtMedAksjonspunkter(List<AksjonspunktDefinisjon> aksjonspunktListe) {
         var aksjonspunktResultater = konverterTilAksjonspunktResultat(aksjonspunktListe);
-        return new BehandleStegResultat(FellesTransisjoner.UTFØRT, aksjonspunktResultater);
+        return new BehandleStegResultat(StegTransisjon.UTFØRT, aksjonspunktResultater);
     }
 
     public static BehandleStegResultat utførtMedAksjonspunkt(AksjonspunktDefinisjon aksjonspunktDefinisjon) {
@@ -58,31 +73,37 @@ public class BehandleStegResultat {
     }
 
     public static BehandleStegResultat utførtUtenAksjonspunkter() {
-        return new BehandleStegResultat(FellesTransisjoner.UTFØRT, Collections.emptyList());
+        return new BehandleStegResultat(StegTransisjon.UTFØRT, List.of());
     }
 
     public static BehandleStegResultat settPåVent() {
-        return new BehandleStegResultat(FellesTransisjoner.SETT_PÅ_VENT, Collections.emptyList());
+        return new BehandleStegResultat(StegTransisjon.SUSPENDERT, List.of());
     }
 
     public static BehandleStegResultat tilbakeførtMedAksjonspunkter(List<AksjonspunktDefinisjon> aksjonspunktListe) {
         var aksjonspunktResultater = konverterTilAksjonspunktResultat(aksjonspunktListe);
-        return new BehandleStegResultat(FellesTransisjoner.TILBAKEFØRT_TIL_AKSJONSPUNKT, aksjonspunktResultater);
+        return new BehandleStegResultat(StegTransisjon.RETURNER, aksjonspunktResultater);
     }
 
-    public static BehandleStegResultat fremoverførtMedAksjonspunkter(TransisjonIdentifikator transisjon,
-            List<AksjonspunktDefinisjon> aksjonspunktDefinisjoner) {
+    public static BehandleStegResultat fremoverførtMedAksjonspunkter(BehandlingStegType målSteg, List<AksjonspunktDefinisjon> aksjonspunktDefinisjoner) {
         var aksjonspunktResultater = konverterTilAksjonspunktResultat(aksjonspunktDefinisjoner);
-        return new BehandleStegResultat(transisjon, aksjonspunktResultater);
+        return new BehandleStegResultat(StegTransisjon.HOPPOVER, målSteg, aksjonspunktResultater);
     }
 
-    public static BehandleStegResultat fremoverførtMedAksjonspunktResultater(TransisjonIdentifikator transisjon,
-            List<AksjonspunktResultat> aksjonspunktResultater) {
-        return new BehandleStegResultat(transisjon, aksjonspunktResultater);
+    public static BehandleStegResultat fremoverførtMedAksjonspunktResultater(BehandlingStegType målSteg, List<AksjonspunktResultat> aksjonspunktResultater) {
+        return new BehandleStegResultat(StegTransisjon.HOPPOVER, målSteg, aksjonspunktResultater);
     }
 
-    public static BehandleStegResultat fremoverført(TransisjonIdentifikator transisjon) {
-        return new BehandleStegResultat(transisjon, Collections.emptyList());
+    public static BehandleStegResultat fremoverført(BehandlingStegType målSteg) {
+        return new BehandleStegResultat(StegTransisjon.HOPPOVER, målSteg, List.of());
+    }
+
+    public static BehandleStegResultat langhoppMedAksjonspunktResultater(BehandlingStegType målSteg, List<AksjonspunktResultat> aksjonspunktResultater) {
+        return new BehandleStegResultat(StegTransisjon.FLYOVER, målSteg, aksjonspunktResultater);
+    }
+
+    public static BehandleStegResultat langhopp(BehandlingStegType målSteg) {
+        return new BehandleStegResultat(StegTransisjon.FLYOVER, målSteg, List.of());
     }
 
     private static List<AksjonspunktResultat> konverterTilAksjonspunktResultat(List<AksjonspunktDefinisjon> aksjonspunktListe) {
@@ -92,21 +113,12 @@ public class BehandleStegResultat {
     }
 
     public static BehandleStegResultat startet() {
-        return new BehandleStegResultat(FellesTransisjoner.STARTET, Collections.emptyList());
-    }
-
-    /** sett nytt aksjonspunkt spesifikt. returner kopi av denne instansen. */
-    public BehandleStegResultat medAksjonspunktResultat(AksjonspunktResultat aksResultat) {
-        List<AksjonspunktResultat> liste = new ArrayList<>(this.aksjonspunktListe);
-        liste.remove(aksResultat);
-        liste.add(aksResultat);
-
-        return new BehandleStegResultat(this.transisjon, liste);
+        return new BehandleStegResultat(StegTransisjon.STARTET, List.of());
     }
 
     // Må selv lage historikkinnslag i steget + ingen støtte for kø-håndtering (ikke
     // relevant før INSØK.UT).
     public static BehandleStegResultat henlagtBehandling() {
-        return new BehandleStegResultat(FellesTransisjoner.HENLAGT, Collections.emptyList());
+        return new BehandleStegResultat(StegTransisjon.HENLEGG, List.of());
     }
 }
